@startuml

'UML GENERE PAR CODE :)

skinparam style strictuml
skinparam classAttributeIconSize 0
skinparam classFontStyle Bold
hide empty members

PACKAGE pumlFromJava{
class PumlDiagram{
        StringVal
    }

    class Java2Puml{

    }
    class PumlDoclet {
        fileName
        dir
        doDCC
        doDCA
    }


    class Package{
        pack
    }

    class Class{
        object

    }

    class Field{
        methode

    }

    class Enum{
        object

    }

    class Interface{
        object
    }

    class Constructor{
        methode

    }

    class Methode{
        methode


    }

    class Modifier {
             modifiers
        }

    class Parameters {
        element

    }

PumlDoclet "recupère le package" -- Package

Package "récupère la class" -- Class
Package "récupère l'interface" -- Interface
Package "récupère l'enum" -- Enum

Class  -- Field : récupère les \nvariables\n en global

PumlDoclet "Donne le fichier a ecrire,\n le directory et le nom du fichier" ---l- PumlDiagram

Class -- Constructor : créé le constructeur
Class -- Methode : récupère les \nméthodes\n de la class

Interface -- Methode : récupère les \nméthodes\n de l'interface
Interface  -- Field : récupère les \nvariables\n en global

Enum -- Methode : récupère les \nméthodes \nde l'enum
Enum  -- Field : récupère les \nvariables\n en global

Methode -- Parameters : récupère les \nparamètres\nde chaque\n méthode

Methode -- Modifier : récupère \nl'attribut\n de la méthode
Field -- Modifier : récupère \nl'attribut \nde la variable

Modifier -- "*\n-modifiers" Modifier

}
@enduml